--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,18 @@ dependencies:
   http: ^0.12.0+2
   rxdart: ^0.22.0
   carousel_slider: ^1.3.0
-  youtube_player_flutter: ^2.0.0
+
+  youtube_player_flutter: ^6.1.0+4
   url_launcher: ^5.0.3
-  # simple_share: ^0.0.1+4
+  # simple_share: ^0.0.1+4 
   shared_preferences:
-  pref_dessert: ^0.3.0
+  pref_dessert: ^0.3.0 
   sqflite: any
   path_provider: ^1.6.5
   country_pickers: ^1.2.0
+  # firebase_admob: ^0.9.3+1
+  # connectivity: ^0.4.8+2
+  webview_flutter: ^0.3.19+9
 
 dev_dependencies:
   flutter_test:
@@ -43,9 +47,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+   - assets/sports.json
+   - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
