--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,10 @@ dependencies:
   sqflite: any
   path_provider: ^1.6.5
   country_pickers: ^1.2.0
+  shimmer: ^1.1.1
+  android_intent: ^0.3.7+2
   # firebase_admob: ^0.9.3+1
-  # connectivity: ^0.4.8+2
-  webview_flutter: ^0.3.19+9
+  connectivity: ^0.4.8+2
 
 dev_dependencies:
   flutter_test:
