--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,51 +4,47 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.19.5 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  font_awesome_flutter: ^8.2.0
-  http: ^0.12.0+2
-  rxdart: ^0.22.0
-  carousel_slider: ^1.3.0
+  cupertino_icons: ^1.0.6
+  font_awesome_flutter: ^10.6.0
+  http: ^1.1.0
+  rxdart: ^0.27.7
+  carousel_slider: ^4.2.1
 
-  youtube_player_flutter: ^6.1.0+4
-  url_launcher: ^5.0.3
+  youtube_player_flutter: ^8.1.2
+  url_launcher: ^6.2.1
   # simple_share: ^0.0.1+4 
-  shared_preferences:
-  pref_dessert: ^0.3.0 
+  shared_preferences: ^2.2.2
+  pref_dessert: ^0.8.0 
   sqflite: any
-  path_provider: ^1.6.5
-  country_pickers: ^1.2.0
-  shimmer: ^1.1.1
-  android_intent: ^0.3.7+3
+  path_provider: ^2.1.1
+  country_pickers: ^2.0.0
+  shimmer: ^3.0.0
+  android_intent_plus: ^4.0.3
   # firebase_admob: ^0.9.3+1
-  connectivity: ^0.4.8+2
-  provider: ^4.3.2+2
-  grouped_list: ^3.7.1
-  flutter_speed_dial_material_design: ^2.0.0
-  drag_and_drop_lists: ^0.2.10
+  connectivity_plus: ^5.0.1
+  provider: ^6.1.1
+  grouped_list: ^5.1.2
+  # flutter_speed_dial_material_design: ^2.0.0
+  drag_and_drop_lists: ^0.3.3
+  webview_flutter: ^4.4.2
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
+  dio: ^5.3.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
@@ -56,28 +52,3 @@ flutter:
    - assets/sports.json
    - assets/images/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
