--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,6 @@ dependencies:
   path_provider: ^2.1.1
   country_pickers: ^2.0.0
   shimmer: ^3.0.0
-  android_intent_plus: ^4.0.3
   # firebase_admob: ^0.9.3+1
   connectivity_plus: ^5.0.1
   provider: ^6.1.1
@@ -37,6 +36,7 @@ dependencies:
   bloc: ^8.1.2
   dio: ^5.3.3
   equatable: ^2.0.5
+  get_it: ^7.6.4
 
 dev_dependencies:
   flutter_test:
