--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   dio: ^5.3.3
   equatable: ^2.0.5
   get_it: ^7.6.4
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
