--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_it: ^7.6.4
   cached_network_image: ^3.3.0
   freezed_annotation: ^2.4.1
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
